--- a/components/Gradient/GradientBackground.module.css
+++ b/components/Gradient/GradientBackground.module.css
@@ -16,18 +16,18 @@
 .animatedGradient {
   width: 100%;
   height: 300px;
-  background-size: 200% 200%;
-  animation: gradientAnimation 2s ease infinite;
+  background-size: 400% 400%;
+  animation: gradientAnimation var(--animation-duration, 10s) ease infinite;
 }
 
 @keyframes gradientAnimation {
   0% {
-    background-position: 0% 0%;
+    background-position: 0% 50%;
   }
   50% {
-    background-position: 50% 0%;
+    background-position: 100% 50%;
   }
   100% {
-    background-position: 0% 100%;
+    background-position: 0% 50%;
   }
 }
