--- a/components/Gradient/GradientBackground.module.css
+++ b/components/Gradient/GradientBackground.module.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 300px;
   background-size: 400% 400%;
-  animation: gradientAnimation var(--animation-duration, 10s) ease infinite;
+  animation: gradientAnimation linear infinite;
 }
 
 @keyframes gradientAnimation {
